--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,15 +2,17 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch",
+            "type": "node",
+            "request": "attach",
+            "name": "Attach by Process ID",
+            "processId": "${command:PickProcess}"
+        },
+        {
+            "name": "Launch file",
             "type": "go",
             "request": "launch",
-            "mode": "exec",
-            "cwd": "${workspaceFolder}/samples/tests",
-            "program": "${workspaceFolder}/cmd/esp/esp",
-            "env": {},
-            "args": ["validate"],
-            "showLog": true
-        }
+            "mode": "debug",
+            "program": "${file}"
+        },
     ]
 }
