Bug fix: Undefined readmodel field causes ''Invalid payload for model' in read model.

--- a/cmd/eml-compliance-test/.generated.eventsourcing.eml.yaml
+++ b/cmd/eml-compliance-test/.generated.eventsourcing.eml.yaml
@@ -51,6 +51,10 @@ Contexts:
         Properties:
         - Name: description
           Type: string
+        - Name: userId
+          Type: string
+        - Name: unknownField
+          Type: string
         - Name: todoitemId
           Type: string
   Readmodels:
