--- a/cmd/eml-compliance-test/Eventsourcing.eml.yaml
+++ b/cmd/eml-compliance-test/Eventsourcing.eml.yaml
@@ -51,6 +51,10 @@ Contexts:
         Properties:
         - Name: description
           Type: string
+        - Name: userId
+          Type: string
+        - Name: unknownField
+          Type: string
         - Name: todoitemId
           Type: string
   Readmodels:
