--- a/tutorial/Eventsourcing.eml.yaml
+++ b/tutorial/Eventsourcing.eml.yaml
@@ -14,6 +14,10 @@ Contexts:
         - Name: dueDate
           Type: string
           Rules: []
+        - Name: userId
+          Type: string
+          Rules:
+          - MustExistIn UserLookup
         - Name: todoId
           Type: string
           Rules:
@@ -42,6 +46,8 @@ Contexts:
           Type: string
         - Name: dueDate
           Type: string
+        - Name: userId
+          Type: string
         - Name: todoId
           Type: string
     - Event:
@@ -51,11 +57,39 @@ Contexts:
           Type: string
         - Name: todoId
           Type: string
+  - Stream: User
+    Commands:
+    - Command:
+        Name: RegisterUser
+        Parameters:
+        - Name: userId
+          Type: string
+          Rules:
+          - IsRequired
+        - Name: email
+          Type: string
+          Rules: []
+        Preconditions: []
+        Postconditions:
+        - UserRegistered
+    Events:
+    - Event:
+        Name: UserRegistered
+        Properties:
+        - Name: userId
+          Type: string
+        - Name: email
+          Type: string
   Readmodels:
+  - Readmodel:
+      Name: UserLookup
+      Key: userId
+      SubscribesTo:
+      - UserRegistered
   - Readmodel:
       Name: TODOList
       Key: todoId
       SubscribesTo:
-      - TodoAdded
       - TodoStatusChanged
+      - TodoAdded
 Errors: []
